feat: add permissioned field operations management
